Fix Bug 288007 - kmail filter import broken

now we can import old filter. We can export/import filter.
FIXED-IN: 4.8
BUG: 288007